fix scroll alignement

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,15 @@
 .main-container {
     /* height: 100dvh; */
     margin-top: var(--header-height);
+    /* padding-top: var(--header-height); */
     /* height: calc(100dvh - var(--header-height)); */
-    overflow-y: scroll;
-    overflow-x: hidden;
+    /* overflow-y: scroll; */
+    /* overflow-x: hidden; */
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
 }
 
 .content {
+    /* margin-top: 500px; */
     flex-grow: 1;
 }
