--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -12,7 +12,7 @@
 
 .content-image-box {
   position: sticky;
-  top: 75px;
+  /* top: 75px; */
   left: 0px;
   width: 300px;
   max-height: 400px;
